# CoGNN

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  makefile.inc
algo_kernels/common_harness/: harness.cpp  makefile.harness
algo_kernels/edge_centric/optimize-gcn/: CMakeLists.txt  gcn.h
algo_kernels/edge_centric/optimize-gcn-inference/: CMakeLists.txt  gcn.h
algo_kernels/edge_centric/original-gcn/: CMakeLists.txt  gcn.h  kernel_harness.h
algo_kernels/edge_centric/ss-gcn/: CMakeLists.txt  gcn.h
algo_kernels/vertex_centric/: Makefile
algo_kernels/vertex_centric/optimize-gcn/: CMakeLists.txt  gcn.h
algo_kernels/vertex_centric/optimize-gcn-inference/: CMakeLists.txt  gcn.h
algo_kernels/vertex_centric/original-gcn/: CMakeLists.txt  gcn.h
algo_kernels/vertex_centric/ss-gcn/: CMakeLists.txt  gcn.h
build_from_source/: Dockerfile
build_from_source/config/: citeseer_config.txt  cora_config.txt  cora_small_config.txt  pubmed_config.txt
evaluation/: plot.py  plot_comparison.py  plot_scale_num_comparison.py
include/: algo_kernel.h  comm_sync.h  edge_centric_algo_kernel.h  engine.h  graph.h  graph_common.h  graph_io_util.h  harness.h  ss_edge_centric_algo_kernel.h  ss_vertex_centric_algo_kernel.h
include/task/: task.h
include/utils/: basic_al.h  byte_buf.h  exception.h  log.h  random_utils.h  stream.h  string_utils.h  thread_pool.h  threads.h
tests/: Makefile  comm_sync.cpp  engine.cpp  graph.cpp  test_graph_types.h
tests/test_graphs/: small.part
tools/: data_transform.py  tmp_run_cluster.py
tools/plot/: plot_accuracy.py  plot_accuracy_various_graph_num.py  plot_duration_and_comm.py  plot_duration_and_comm_scale.py  plot_duration_breakdown_and_comm.py  plot_message_passing_comm.py  plot_multiparty_accuracy.py  print_inter_edge_ratio.py
tools/scripts/: clean_network.sh  setup_network.sh  test_network.sh
